# chip8-rust

./: Cargo.toml  README.md
src/: app.rs  beeper.rs  egui.rs  lib.rs  main.rs  postprocess_shader.wgsl  settings.rs  shader.wgsl  ui.rs  video_buffer.rs  vm.rs  wgpu_ctx.rs
src/app/: keymap.rs
src/vm/: sprites.rs
